    is ] and do not matching otherwise.
    Removed the 3-char limit for an individual tag within [].
    Updated version tag to 2.01-rc4

control
    Built ipk
    Added the 2.01-rc4 tag

========== 2.01-rc5 STARTS

plugin.py
    Add Mozilla/5.0 compat to User Agent string
    Version now shown in configuration menu.
    Raised encoded text length limit from 2000 to 7000 after testing
    what was allowed.
    Add "debug" print statements to some except clauses, so oddities
    can be recorded.
    Fixed My_setEvent() to use the new begin_matcher+end_matcher
    regexes.
    Updated version tag to 2.01-rc5

control
    Built ipk
    Added the 2.01-rc5 tag to git

========== 2.01-rc6 STARTS

plugin.py
    Rename my_Sref() to my_Sref() for a consistent use of My.
    Change debug print tags from EPGTranslator to EPGTranslator-Plugin,
    to make clear this is happening in a plugin.
    If we don't have an Event or 'getEventName' in the Event then don't
    try to do anything. Otherwise we'll get a crash.
    Change My_setEvent() to set all known possible text fields in the
    event, but only if the tag exists.

plugin.py
control
    Updated version tag to 2.01-rc6
    Built ipk
    Added the 2.01-rc6 tag to git

========== 2.01-rc7 STARTS

plugin.py
    Add global split_off_props() function for the common functionality,
    and in it check that descr contains text before checking descr[0].

plugin.py
    In My_setEvent cache the translated text, NOT the original text!

plugin.py
control
    Updated version tag to 2.01-rc7
    Built ipk
    Added the 2.01-rc7 tag to git

========== 2.01-rc8 STARTS

Skin_medium.py
Skin_small.py
plugin.py
    Move time and duration or programme into own window, so it is only
    displayed once.
    Allow () property groups as well as []
    Do not show property groups in right-to-left translations.

plugin.py
control
    Updated version tag to 2.01-rc8
    Built ipk
    Added the 2.01-rc8 tag to git